fix: z-index

--- a/src/shared/ui/card/Card.module.scss
+++ b/src/shared/ui/card/Card.module.scss
@@ -8,8 +8,6 @@
     gap: 1rem;
     text-decoration: none;
 
-    z-index: 49;
-
     &_disabled{
         cursor: default;
 
