--- a/src/widgets/header/Header.module.scss
+++ b/src/widgets/header/Header.module.scss
@@ -10,7 +10,7 @@ $nav-disabled-opacity: .3;
     flex-direction: column;
     height: fit-content;
 
-    z-index: 9999;
+    z-index: 99990;
 
     position: fixed;
     width: 100%;
